[tool.poetry]
name = "at-krl-editor"
version = "1.0.21"
description = "Editor component and server for temporal knowledge base"
authors = ["grigandal625"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
jsonschema = "^4.23.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
at-krl = {git = "https://github.com/grigandal625/AT_KRL.git", rev = "master"}
drf-spectacular = "^0.28.0"
drf-nested-routers = "^0.94.1"
celery = "^5.4.0"
at-queue = {git = "https://github.com/grigandal625/AT_QUEUE.git", rev = "master"}
django-cors-headers = "^4.7.0"
adrf = {git = "https://github.com/grigandal625/adrf.git", rev = "main"}
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
